--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand text-light fw-bolder" routerLink="/">Questionnaire APP</a>
         <div class="justify-content-end">
             <div class="navbar-nav">
-                <a class="nav-link active text-light fw-bolder" aria-current="page" routerLink="/">Restart</a>
+                <button class="nav-link active text-light fw-bolder" (click)="doRestart()">Restart</button>
             </div>
         </div>
     </div>
